# eigendude.github.io

./: index.css  index.html  manifest.json  spring_break.html
_dist_/: index.js  ipfs.js  motiontracker.js  world.js
_dist_/workers/: motion_tracker_module.js
_snowpack/pkg/: hlsjs.js  import-map.json  jsonld.js  three.js
_snowpack/pkg/common/: _commonjsHelpers-37fa8da4.js  process-2545f00a.js
_snowpack/pkg/threads/: observable.js  worker.js
assets/: index-CrI8oRwl.js  index-CtV7bjBk.js  index-DscEy-9b.js
lib/: CMakeLists.txt  build-ci.sh
lib/api/: imgproc.cpp  imgproc.hpp  reconstruction.cpp  reconstruction.hpp  scene.cpp  scene.hpp  video.cpp  video.hpp
lib/kernels/cpu/: cpu_imgproc.cpp  cpu_imgproc.hpp  cpu_reconstruction.cpp  cpu_reconstruction.hpp  cpu_scene.cpp  cpu_scene.hpp  cpu_video.cpp  cpu_video.hpp
lib/motion_tracker/: motion_tracker.cpp  motion_tracker.hpp  motion_tracker_embinder.cpp  vision_graph.cpp  vision_graph.hpp
lib/utils/: emscripten_utils.cpp  emscripten_utils.hpp  frame_pool.cpp  frame_pool.hpp  image_utils.cpp  image_utils.hpp  math_utils.cpp  math_utils.hpp
motion_tracker/: .gitignore  motion_tracker.js  motion_tracker.wasm.map  motion_tracker_worker.js
